Implementación de middleware CORS configurable con soporte para orígenes, métodos y encabezados personalizados